server/public/main.css
* { 
  outline: 1px transparent #947676 !important; 
  } 
  
   * { 
    -webkit-box-sizing: border-box; 
    -moz-box-sizing: border-box; 
    -ms-box-sizing: border-box; 
    box-sizing: border-box; 
    }

    .form-control {
      width: 25%
    }

    footer {
      position: fixed;
      left: 0;
      bottom: 0;
      width: 100%;
      color: black;
    }

  .bg-grass {
    background-image: url("./images/grass.jpg");
    background-color: grey;
    background-position: center;
    position: fixed;
    left: 0;
    top: 0;
    z-index: -1;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover !important;
    background-repeat: no-repeat;
    background-attachment: fixed;
    filter: blur(0.5px) brightness(80%);
    min-height: 100vh;
    height: 100%;
    width: 100vw;
    display:flex;
    align-items: center;
  }

  .bg-header {
    background-image: url("./images/grass.jpg");
    background-position: center;
    background-repeat: no-repeat;
    filter: blur(0.5px) brightness(60%);
  }

.header {
  font-family: 'Montserrat', sans-serif;
  margin: 1%
}

.nav {
  font-family: 'Montserrat', sans-serif;
  margin: 3% 1% 3% 1%;
}

footer {
  font-family: 'Montserrat', sans-serif;
  margin: 1%
}

.table {
  font-size: 0.8em;
  color: rgb(88, 87, 87);
}

body {
  color: white;
  font-family: 'Raleway', sans-serif;
}

.table-leaderboard {
  background: #EFEEEE;
  color:black;
  font-size: 1.1em;
  opacity: 0.8;
}

.bets {
  background: white;
}

.members {
  width: 40%;
  margin-left: auto;
  margin-right: auto;
  background: #EFEEEE;
  color:black;
  font-size: 1.1em
}

.timetable {
  font-size: 1.3em;
  margin-left: 6%;
  margin-top: 20%;
  height: 200px
}

.bg-green {
  background-image: url("./images/green.jpg");
  background-color: grey;
  background-position: center;
  position: fixed;
  left: 0;
  top: 0;
  z-index: -1;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover !important;
  background-repeat: no-repeat;
  background-attachment: fixed;
  filter: blur(0.5px) brightness(60%);
  min-height: 100vh;
  height: 100%;
  width: 100vw;
  display:flex;
  align-items: center;
}

.leaderboard {
  margin-left: auto;
  margin-right: auto;
  text-align: center
}

.input-name {
  margin-left: 1%
}

.addbet {
  margin: 1%
}

.add-bet {
  margin: 1%
}

.calculator {
  background-color: #E4EDF8;
  height: 400px;
  width: 300px;
  border-radius: 15px;
  position: relative;
  top: 60px;
  margin-left: auto;
  margin-right: auto;
  box-shadow: 12px 12px #009ACD;
  border-left: 4px solid #009ACD;
  border-top: 2px solid #009ACD;
}

.calc-input {
  position: relative;
  width:240px;
  height: 50px;
  left: 28px;
  top: 50px;
  font-size: 30px;
  text-align: right;
  margin-bottom: 8%;
  border-radius: 5px;
  padding-right: 4%
}


.keys {
  position: relative;
  top: 35px;
  left: 15px;
  bottom: 10px
}

.button {
  width: 45px;
  height: 35px;
  border: none;
  border-radius: 8px;
  margin-left: 17px;
  cursor: pointer;
  border-top: 2px solid transparent;
  font-size: 25px;
}

.button.blue {
  color: white;
  background-color: #00ACD2;
  box-shadow: 3px 3px #004C76;
}

.button.blue:hover {
  color: white;
  background-color: #004C76;
}

.button.blue:active {
  transform: translateY(4px);
}

.button.white {
  color: #048ED8;
  background-color: white;
  box-shadow: 3px 3px #908EAE;
}

.button.white:hover {
  background-color: #908EAE;
  color: white
}

.button.white:active {
  transform: translateY(4px);
}


.button.orange {
  background-color: #FFC200;
  color: #89687F;
  box-shadow: 3px 3px #FC9925;
}

.button.orange:hover {
  background-color: #FC9925;
  color: white;
  box-shadow: 3px 3px #FC9925;
}

.button.orange:active {
  transform: translateY(4px);
}


.p-calc {
  line-height: 10px;
}

.calc {
  text-align: center;
  margin-top: 2%;
  font-family: 'Mali', cursive;
  color: #2E2E37;
  font-size: 45px
}

.bg-calc {
  background-image: url("./images/background.jpg");
  background-color: grey;
  background-position: center;
  position: fixed;
  left: 0;
  top: 0;
  z-index: -1;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover !important;
  background-repeat: no-repeat;
  background-attachment: fixed;
  filter: blur(0.5px) brightness(80%);
  min-height: 100vh;
  height: 100%;
  width: 100vw;
  display:flex;
  align-items: center;
}

.horoscope {
  background: black
}

.row-1 {
  margin-top: 3%
}

.sidebar {
  height: 100%; /* Full-height: remove this if you want "auto" height */
  width: 250px; /* Set the width of the sidebar */
  position: fixed; /* Fixed Sidebar (stay in place on scroll) */
  z-index: 1; /* Stay on top */
  top: 0; /* Stay at the top */
  left: 0;
  background: #EFEEEE;
  overflow-x: hidden; /* Disable horizontal scroll */
  padding-top: 20px;
  text-align: center;
  color: black;
  opacity: 0.8;
}

